--- a/rootdir/etc/init.dior.rc
+++ b/rootdir/etc/init.dior.rc
@@ -30,7 +30,8 @@ import init.dior.usb.rc
 on early-init
     mount debugfs debugfs /sys/kernel/debug
     write /sys/block/mmcblk0/queue/scheduler noop
-    write /sys/block/mmcblk0/bdi/read_ahead_kb 512
+    write /sys/block/mmcblk0/bdi/read_ahead_kb 1024
+    write /sys/block/mmcblk1/bdi/read_ahead_kb 1024
 
 on init
     # Set permissions for persist partition
@@ -411,9 +412,10 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 1401600
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_max_freq 1401600
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq 1401600
-
-    setprop sys.io.scheduler bfq
     start mpdecision
+
+    write /sys/block/mmcblk0/queue/scheduler bfq
+    write /sys/block/mmcblk1/queue/scheduler bfq
 
 # Set different perfer network type for different phone type
 on property:ro.boot.modem=LTETD
