--- a/rootdir/etc/init.dior.rc
+++ b/rootdir/etc/init.dior.rc
@@ -318,10 +318,10 @@ service mpdecision /system/bin/mpdecision --avg_comp
     group root system
     disabled
 
-service thermal-engine /system/bin/thermal-engine
-    class main
-    user root
-    group root
+#service thermal-engine /system/bin/thermal-engine
+#    class main
+#    user root
+#    group root
 
 service qseecomd /system/bin/qseecomd
     class core
