disable unused stuff

--- a/rootdir/etc/init.dior.rc
+++ b/rootdir/etc/init.dior.rc
@@ -357,10 +357,10 @@ service time_daemon /system/bin/time_daemon
 #    group root system
 #    disabled
 
-service thermal-engine /system/bin/thermal-engine
-    class main
-    user root
-    group root
+#service thermal-engine /system/bin/thermal-engine
+#    class main
+#    user root
+#    group root
 
 service qseecomd /system/bin/qseecomd
     class core
@@ -418,7 +418,6 @@ on charger
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
-    start mpdecision
 
 on property:sys.boot_completed=1
     # Enable Power modes and set the CPU Freq Sampling rates
